Disable actions instead of hiding them fixes some problems with actions that can not be added to a toolbar. Thanks to dfaure for the patch!

BUG: 207297

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1034746